[package]
name = "subparse"
version = "0.3.0"
authors = ["kaegi <kaegi.dev@gmail.com>"]
description = "Load, change and write common subtitle formats (srt/ass/idx/sub)"
repository = "https://github.com/kaegi/subparse"
documentation = "https://docs.rs/subparse"
readme = "README.md"
keywords = ["subtitle", "parse", "library", "write"]
license = "MPL-2.0"


[dependencies]
error-chain = "0.10.0"
combine = "2.5.1"
vobsub = "0.2.0"
itertools = "0.6.2"
encoding = "0.2.33"
